Rebase on Java 8